# periodic

./: .gitignore  CMakeLists.txt  CMakeLists.txt.bak  README.md  appdatamanager.cpp  appdatamanager.h  eleminfodlg.cpp  eleminfodlg.h  main.cpp  shader_data.h  table.cpp  table.h
build-windows/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  periodic.sln  periodic.vcxproj  periodic.vcxproj.filters
build-windows/periodic.dir/Debug/periodic.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  periodic.lastbuildstate
build-windows/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build-windows/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
